--- a/style.css
+++ b/style.css
@@ -1,3 +1,84 @@
-#top-left {
+html,body {
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+    padding-top: 1em;
+    text-align: center;
+    background-color: #38b6ff; 
+    /* background-image: url(korok.png); */
+    background-size: cover;
+    background-repeat: space;
+  }
+  
+  h1, h2 {
+    font-family: 'Press Start 2P', monospace;
+    /* font-family: monospace; */
+    color: goldenrod;
+  }
+
+  h3, p, ul {
+    font-family: 'Press Start 2P', monospace;
+    color: white;
+    text-align: center;
+  }
+  
+  canvas {
+    /* background-image: url('../img/stone.png'); */
+    /* background-repeat: repeat; */
+    background-color: #568b44;
+    width: 100%;
+    height: 100;
+  }
+  
+  #container {
+  max-width: 50em;
+  /* height: 70vh; */
+  background-color: #6e5431;
+  margin: 0 auto;
+  padding: 1em;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-rows: .20fr .60fr .20fr;
+  grid-template-columns: .25fr .5fr .25fr;
+  grid-template-areas: "top-left top-left top-right"
+                        "game game game"
+                        "btm-left btm-right btm-right";
+  }
+  
+  #top-left, #top-right, #btm-left, #btm-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #89683c;
+  }
+  
+  #top-left {
     grid-area: top-left;
-}
+  }
+  
+  #top-right {
+    grid-area: top-right;
+    /* background-color: #222; */
+    /* background-image: url('../img/funky-lines.png'); */
+  }
+  
+  main {
+    grid-area: game;
+  }
+  
+  
+  #btm-left {
+    grid-area: btm-left;
+    /* background-color: #222; */
+  }
+  
+  #btm-right {
+    grid-area: btm-right;
+    /* background-color: #222; */
+  }
+
+  #game {
+    height: 600px;
+  }
